<resources>
    <string name="app_name">SimpleChat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Login</string>
    <string name="name">Username</string>
    <string name="logo_descriptions">It is logo</string>
    <string name="tmp_user_name">Username</string>
    <string name="log_out">Log Out</string>
    <string name="go_back">Return back</string>
    <string name="item">Item</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="already_have_account">Already have account.</string>
    <string name="login">Login</string>
</resources>